# PaTAS-Subjective-Logic-Neural-Networks-Trust-Assessment

./: README.md  calibration_trust_eval.py  data_loader.py  degradations.py  eval_5g_noise.py  eval_chapter.py  eval_helpers.py  external_bridge.py  latency_eval.py  main.py  noise_utils.py  patas.py  plot_effectiveness_hardcoded.py  plot_latency_hardcoded.py  pyproject.toml  sl.py  subjective_logic.py
data/: README.md
results/NN_Train_cancer_16_0.25,0.0,0.75_trust_PathSize_None/: metrics.txt
results/NN_Train_cancer_16_0.25,0.25,0.5_0.25,0.25,0.5_PathSize_None/: metrics.txt
results/NN_Train_cancer_16_distrust_distrust_PathSize_None/: metrics.txt
results/NN_Train_cancer_16_distrust_trust_PathSize_None/: metrics.txt
results/NN_Train_cancer_16_distrust_vacuous_PathSize_None/: metrics.txt
results/NN_Train_cancer_16_trust_distrust_PathSize_None/: metrics.txt
results/NN_Train_cancer_16_trust_trust_PathSize_None/: metrics.txt
results/NN_Train_cancer_16_trust_vacuous_PathSize_None/: metrics.txt
results/NN_Train_cancer_16_vacuous_distrust_PathSize_None/: metrics.txt
results/NN_Train_cancer_16_vacuous_trust_PathSize_None/: metrics.txt
results/NN_Train_cancer_16_vacuous_vacuous_PathSize_None/: metrics.txt
results/NN_Train_mnist_128_trust_trust_PathSize_4/: ipta_paths.json  metrics.txt
results/NN_Train_mnist_128_vacuous_vacuous_PathSize_None/: metrics.txt
results/NN_Train_mnist_16_16_trust_trust_PathSize_None/: metrics.txt
tests/: conftest.py  test_cancer.py  test_mnist.py  test_mnist_pois.py.old  test_mnist_poisoned.py
(+95 files in other folders)
